--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@ text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6);
   </div>
 
   <script>
-   const site1 = "https://margs112.github.io/SENTRO-CREDENTIALS/";
-const site2 = "https://margs112.github.io/SENTROPLATFORMS/";
-const site3 = "https://drive.google.com/drive/folders/13d1g9LVx4nIygDuztmkx6IXwctVz_mFj?usp=drive_link";
+   const site1 = "https://margs112.github.io/GINHAWISE-HISTORY/";
+const site2 = "https://margs112.github.io/GINHAWISE-FEATURES/";
+const site3 = "https://www.canva.com/design/DAG0R0YCZew/tZp7Rw7El1eXxOZmqQGVUA/watch?utm_content=DAG0R0YCZew&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h32ad52b9a4";
 
 let visited1 = localStorage.getItem("visited1") === "true";
 let visited2 = localStorage.getItem("visited2") === "true";
