--- a/index.html
+++ b/index.html
@@ -349,22 +349,30 @@ function unlockFinalModule() {
   if (visited1 && visited2) {
     b3.disabled = false;
     b3.classList.remove("locked");
-    b3.textContent = "✔ Access Photobooth";
+    b3.textContent = "✔ Access Poster";
   }
 }
+
+b1.addEventListener("click", () => {
+  visited1 = true;
+  localStorage.setItem("visited1", "true");
+  unlockFinalModule();
+  setTimeout(() => window.location.href = site1, 300);
+});
+
+b2.addEventListener("click", () => {
+  visited2 = true;
+  localStorage.setItem("visited2", "true");
+  unlockFinalModule();
+  setTimeout(() => window.location.href = site2, 300);
+});
+
+b3.addEventListener("click", () => {
+  if (!b3.disabled) window.location.href = site3;
+});
+
+unlockFinalModule();
+
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
