--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@ text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6);
         <div class="module">
           <img src="0007.png" alt="Poster">
           <div class="module-content">
-            <h3>Poster</h3>
-            <p>Our official poster for access and awareness.</p>
-            <button class="btn" id="btn3">View Poster</button>
+            <h3>Prototype</h3>
+            <p>View the Poster and Video of the Official GinhaWise Prototype</p>
+            <button class="btn" id="btn3">View Prototype</button>
           </div>
         </div>
       </div>
