--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6);
   <script>
    const site1 = "https://margs112.github.io/GINHAWISE-HISTORY/";
 const site2 = "https://margs112.github.io/GINHAWISE-FEATURES/";
-const site3 = "https://www.canva.com/design/DAG0R0YCZew/tZp7Rw7El1eXxOZmqQGVUA/watch?utm_content=DAG0R0YCZew&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h32ad52b9a4";
+const site3 = "https://drive.google.com/drive/folders/1aDamopFPhO4-M2HMG1SCoVgoCzzh5RgP?usp=sharing";
 
 let visited1 = localStorage.getItem("visited1") === "true";
 let visited2 = localStorage.getItem("visited2") === "true";
