--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ function unlockFinalModule() {
   if (visited1 && visited2) {
     b3.disabled = false;
     b3.classList.remove("locked");
-    b3.textContent = "✔ Access Poster";
+    b3.textContent = "✔ Access Prototype";
   }
 }
 
